# NativeApp

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/nativeapp/: MainActivity.kt
app/src/main/java/com/example/nativeapp/ui/theme/: Theme.kt
gradle/wrapper/: gradle-wrapper.properties
sdklibrary/: build.gradle
sdklibrary/sdkAar/: SDK_V1.0.aar
sdklibrary/src/androidTest/java/com/example/sdklibrary/: ExampleInstrumentedTest.java
sdklibrary/src/main/java/com/example/sdklibrary/: SDK.java
sdklibrary/src/main/jni/: CMakeLists.txt
sdklibrary/src/main/jni/cpp/: SDK.cpp
sdklibrary/src/main/jni/include/: com_example_sdklibrary_SDK.h
sdklibrary/src/test/java/com/example/sdklibrary/: ExampleUnitTest.java
